--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^5.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
