--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
+    "compile": "tsc --project .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "BadVolt",
